@@ -60,6 +60,8 @@ import java.io.File;
 import java.io.IOException;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import java.util.LinkedList;
@@ -1427,15 +1429,11 @@ public final class StdDraw implements ActionListener, MouseListener, MouseMotion
         ImageIcon icon = new ImageIcon(filename);
 
         // try to read from URL
-        if (icon.getImageLoadStatus() != MediaTracker.COMPLETE) {
-            try {
-                URL url = new URL(filename);
-                icon = new ImageIcon(url);
-            }
-            catch (MalformedURLException e) {
-                /* not a url */
-            }
-        }
+        try {
+    URL url = new URI(filename).toURL();
+} catch (URISyntaxException | MalformedURLException e) {
+    throw new IllegalArgumentException("Invalid URL: " + filename, e);
+}
 
         // in case file is inside a .jar (classpath relative to StdDraw)
         if (icon.getImageLoadStatus() != MediaTracker.COMPLETE) {
